re PR libfortran/42996 (Incorrect length returned from get_command_argument intrinsic)

2010-02-09  Tobias Burnus  <burnus@net-b.de>

        PR fortran/42996
        * intrinsics/args.c (get_command_argument_i4): Always return
        commandline-argument length for length parameter.

From-SVN: r156630